commit del segundo video completo