@@ -1,7 +1,6 @@
 package com.example.demo.application;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.http.ResponseEntity;
@@ -12,15 +11,14 @@ import com.example.demo.domain.service.OrderService;
 import com.example.demo.infrastructure.client.UserClient;
 import com.example.demo.infrastructure.repository.OrderRepository;
 
-import example.order.request.OrderCreationRequest;
-import example.order.response.OrderDto;
-import example.user.response.AddressDto;
 import lombok.RequiredArgsConstructor;
+import order.request.OrderCreationRequest;
+import order.response.OrderDto;
+import user.response.AddressDto;
 
 @Service
 @RequiredArgsConstructor
 public class OrderServiceImpl implements OrderService{
-	
 	
 	private final OrderRepository repository;
 	
@@ -28,45 +26,60 @@ public class OrderServiceImpl implements OrderService{
 	
 	private final UserClient userClient;
 	
+	
+	
 	@Override
 	public ResponseEntity<OrderDto> insert(OrderCreationRequest request) {
-		
 		try {
 			Order order = Order.builder()
 					.userId(request.getUserId())
-					.productType(request.getProductType())
+					.product(request.getProduct())
 					.amount(request.getAmount())
-					.price(request.getPrice())
 					.build();
+			
+			OrderDto orderDto = modelMapper.map(order, OrderDto.class);
+			AddressDto addressDto = null;
+			
+			if (request.getAddress() == null) {
+				addressDto = userClient.getAddressByUserId(request.getUserId());
+				
+				
+			}else {
+				request.getAddress().setUserId(request.getUserId());
+				
+				addressDto = userClient.insertAddress(request.getAddress());
+				
+			}
+			
+			orderDto.setAddress(addressDto);
+			order.setAddressId(addressDto.getId());
 			
 			repository.save(order);
 			
-			OrderDto orderDto = modelMapper.map(order, OrderDto.class);
-			
-			if (request.getAddress() == null) {
-
-				AddressDto address = userClient.getAddress(order.getUserId());
-				
-				orderDto.setAddress(address);
-			}
+			orderDto.setPrice(order.getPrice());
 			
 			return ResponseEntity.ok(orderDto);
 		}catch(Exception e) {
+			e.printStackTrace();
 			return ResponseEntity.badRequest().build();
 		}
 	}
 
 	@Override
 	public ResponseEntity<List<OrderDto>> getOrdersByUser(Long userId) {
-
-		List<OrderDto> ordersFound = repository.findAllByUserId(userId)
+		List<OrderDto> orderList = repository.findAllByUserId(userId)
 				.stream()
-				.map(order -> modelMapper.map(order, OrderDto.class))
-				.collect(Collectors.toList());
+				.map(order -> {
+					OrderDto orderDto = modelMapper.map(order, OrderDto.class);
+					orderDto.setAddress(userClient.getById(order.getAddressId()));
+					return orderDto;
+					
+				})
+				.toList();
 		
-		if (ordersFound.isEmpty()) return ResponseEntity.badRequest().build();
+		if (orderList.isEmpty()) return ResponseEntity.badRequest().build();
 		
-		return ResponseEntity.ok(ordersFound);
+		return ResponseEntity.ok(orderList);
 	}
 
 }
